# dsd-neo

./: .bestpractices.json  .clang-tidy  .clang-tidy.strict  .gitattributes  .gitignore  .gitleaks.toml  .vsconfig  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYRIGHT  README.md  SECURITY.md  THIRD_PARTY.md  vcpkg-configuration.json  vcpkg.json
apps/dsd-cli/: CMakeLists.txt  frontend.c  frontend.h  main.c
src/app_control/: CMakeLists.txt  app_command_queue.c  command_dispatch.h  commands_internal.h  frontend.c  frontend_internal.h  menu_services.c  services.h  snapshot_internal.h  tcp_audio_connect.c  telemetry_hooks_impl.h  telemetry_hooks_install.c  ui_cmd_queue.c  ui_history.c  ui_opts_snapshot.c  ui_snapshot.c
src/core/: CMakeLists.txt  mbe_result_context.h  state_ext.c
src/crypto/: CMakeLists.txt  crypt-aes.c  crypt-csi72.c  crypt-des.c  crypt-ecdsa.c  crypt-etc.c  crypt-kirisun.c  crypt-pc4.c  crypt-pc5.c  crypt-rc2.c  crypt-rc4.c  crypt-tyt.c  dmr_mi.c  md2ii.c  md2ii.h  pc4_internal.h  vendor_ap_key_parse.h
src/dsp/: CMakeLists.txt  costas.cpp  cqpsk_equalizer.cpp  cqpsk_path.cpp  cqpsk_perm.c  demod_pipeline.cpp  dmr_sync.c  dsd_filters.c  dsd_frame_sync.c  dsd_symbol.c  equalizer.cpp  firdes.cpp  fll.cpp  frame_sync_internal.h  frame_sync_level.c  frame_sync_level.h  frame_sync_policy.c  frame_sync_profile.c  frame_sync_test_support.h  fsk_modem.c  halfband.cpp  m17_rrc_taps.h  mmse_interp.cpp  mmse_interp.h  p25p1_heuristics.c  pcm_input_staging.c  pcm_input_staging.h  polar_disc.cpp  resampler.cpp  simd_fir.cpp  simd_fir_avx2.cpp  simd_fir_internal.h  simd_fir_neon.cpp  simd_fir_sse2.cpp  simd_widen.cpp  simd_widen_avx2.cpp  simd_widen_neon.cpp  simd_widen_sse2.cpp  simd_x86_cpu.h  snr_bias.cpp  (+6 more)
src/engine/: CMakeLists.txt  engine.c  engine_hooks_install.h  frame_sync_hooks_install.c  m17_udp_hooks_install.c  net_audio_input_hooks_install.c  p25_optional_hooks_install.c  rigctl_query_hooks_install.c  rtl_stream_io_hooks_install.c  rtl_stream_metrics_hooks_install.c  trunk_scan.c  trunk_scan_internal.h  trunk_scan_test_support.h  trunk_tuning.c  trunk_tuning_hooks_install.c  udp_audio_hooks_install.c
src/fec/: CMakeLists.txt  Hamming.cpp  bptc.c  dmr_late_entry.c  ez.cpp  ezpwd_rs_definitions.cpp  fec.c  hamming_10_6_3.cpp  rs-12-9.c  trellis34.c
src/io/: CMakeLists.txt
src/platform/: CMakeLists.txt  audio_concealment.c  audio_portaudio.c  audio_pulse.c  audio_stream_internal.h  file_compat_posix.c  file_compat_win32.c  nonce.c  posix_compat_posix.c  posix_compat_win32.c  sockets_posix.c  sockets_win32.c  threading_posix.c  threading_win32.c  timing_posix.c  timing_win32.c
src/runtime/: CMakeLists.txt  comp.c  config.cpp  config_expand.c  config_schema.c  config_user.cpp  config_user_internal.h  config_user_loader.cpp  config_user_validation.cpp  control_pump.c  decode_mode.c  exitflag.c  frame_sync_hooks.c  freq_parse.c  input_level.c  input_ring.cpp  input_ring_watermark.cpp  input_spec.c  log.cpp  m17_udp_hooks.c  mem.cpp  net_audio_input_hooks.c  p25_optional_hooks.c  p25_p2_audio_ring.c  path_policy.c  rdio_export.c  rigctl_query_hooks.c  ring.cpp  rt_sched.cpp  rtl_stream_io_hooks.c  rtl_stream_metrics_hooks.c  shutdown.c  state_ext.c  telemetry_hooks.c  trunk_cc_candidates.c  trunk_scan_hooks.c  trunk_tuning_hooks.c  udp_audio_hooks.c  ui_async_stubs.c  unicode.cpp  (+1 more)
tests/: CMakeLists.txt  p25_p1_pdu_json_shim.c  test_aes_ofb.c  test_p25_crc12_16.c  test_p25_frequency_map.c  test_p25_lcch_crc16.c  test_p25_lsd.c  test_p25_malformed_frames.c  test_p25_mbt_decode.c  test_p25_p1_fec_boundaries.c  test_p25_p1_lcw_sm.c  test_p25_p1_ldu_gating.c  test_p25_p1_nid.c  test_p25_p1_pdu_json.c  test_p25_p2_lfsr.c  test_p25_p2_mac_decode.c  test_p25_p2_mac_json_more.c
tests/cmake/: RunCliSmoke.cmake
tests/core/: mbelib.h  test_core_ambe_interleave.c  test_core_audio2_helpers.c  test_core_audio_dispatch.c  test_core_audio_gain.c  test_core_audio_group_gate.c  test_core_audio_input_rate.c  test_core_call_alert_history.c  test_core_call_state.c  test_core_call_state_alloc.c  test_core_csv_import.c  test_core_dmr_voice_alg_gate.c  test_core_dsd_time.c  test_core_frame_log.c  test_core_hytera_bp_silence.c  test_core_init_state.c  test_core_input_level.c  test_core_mbe_file_io.c  test_core_mbe_transform_context.c  test_core_misc_power_filters.c  test_core_safe_api.c  test_core_secret_redaction.c  test_core_state_ext.c  test_core_straight_keystream_validation.c  test_core_talkgroup_policy.c  test_core_tg_policy_alloc_fail.c  test_dibit_rtl_fsk_reliability.c  test_dibit_symbol_bin_soft.c
tests/crypto/: test_aes_ofb.c  test_csi72.c  test_des.c  test_ecdsa.c  test_kirisun.c  test_pc4_tyt.c  test_pc5_baofeng.c  test_rc2_retevis.c  test_rc4.c
tests/dsp/: bench_dsp.cpp  test_cqpsk_reliability.c  test_dsp_audio_filters.cpp  test_dsp_audio_polydecim.cpp  test_dsp_channel_filters.cpp  test_dsp_costas.cpp  test_dsp_cqpsk_12k_sps3.cpp  test_dsp_cqpsk_bits.cpp  test_dsp_cqpsk_eq.cpp  test_dsp_cqpsk_eq_adapt.cpp  test_dsp_cqpsk_eq_awgn.cpp  test_dsp_cqpsk_eq_bounds.cpp  test_dsp_cqpsk_eq_cma.cpp  test_dsp_cqpsk_eq_dfe.cpp  test_dsp_cqpsk_eq_dqpsk.cpp  test_dsp_cqpsk_eq_reset.cpp  test_dsp_cqpsk_eq_ringcap.cpp  test_dsp_cqpsk_eq_stride.cpp  test_dsp_cqpsk_eq_wl.cpp  test_dsp_cqpsk_eq_wl_hyst.cpp  test_dsp_cqpsk_path.cpp  test_dsp_cqpsk_path_dqpsk.cpp  test_dsp_cqpsk_path_dqpsk_feedback.cpp  test_dsp_cqpsk_path_env.cpp  test_dsp_cqpsk_path_resets.cpp  test_dsp_cqpsk_path_runtime.cpp  test_dsp_cqpsk_path_safety.cpp  test_dsp_cqpsk_path_sps.cpp  test_dsp_cqpsk_pipeline.cpp  test_dsp_demod_helpers.cpp  test_dsp_demod_misc.cpp  test_dsp_equalizer.cpp  test_dsp_firdes.c  test_dsp_fll.cpp  test_dsp_fll_band_edge.cpp  test_dsp_fm_agc_limit.cpp  test_dsp_fm_cma.cpp  test_dsp_fm_demod_ref.cpp  test_dsp_fm_limiter.cpp  test_dsp_halfband.cpp  (+32 more)
tests/engine/: test_engine_cleanup_audio.c  test_engine_generic_trunk_return_matrix.c  test_engine_io_hooks_install.c  test_engine_no_carrier_reset.c  test_engine_protocol_dispatch.c  test_engine_rigctl_query_hooks_install.c  (+5 more)
(+1108 files in other folders)
